crates/language-v2/tests/src/fail/p3_references/invalid_version/test.stderr
error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '3.0.0..MAX'.
  --> src/fail/p3_references/invalid_version/test.rs:20:45
   |
20 | ...                   reference = Baz,
   |                                   ^^^

error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '1.0.0..2.0.0'.
  --> src/fail/p3_references/invalid_version/test.rs:25:45
   |
25 | ...                   reference = Baz,
   |                                   ^^^

error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '1.0.0..2.0.0 | 3.0.0..MAX'.
  --> src/fail/p3_references/invalid_version/test.rs:30:45
   |
30 | ...                   reference = Baz
   |                                   ^^^
